	server/player.c, server/server.c, server/server.h, server/admin.c: Use
	net_closesocket to close a socket (Windows port closes sockets
	differently).
	* common/gtk/gtkbugs.c: Cannot press a button twice without moving the
	cursor out and in again. The workaround depends on the runtime version
	of Gtk+, not the version at compile time. (Refinement of the patch
	2006-09-03)

2006-09-12  Stefan Walter <sw@gegenunendlich.de>
	* common/Makefile.am: Creation of version.h compatible with FreeBSD.

2006-09-12  Roland Clobus <rclobus@bigfoot.com>
	* server/meta.c, meta-server/main.c: Meta server disconnects
	unresponsive servers. Server shows a message when the meta server
	disconnects.
	* client/gtk/interface.c: Don't change GUI state when a second quote
	is issued.
	* common/game.c: Return NULL pointer when game not found.

2006-09-10  Bas Wijnen <wijnen@debian.org>
	* common/game.c: Treat errors in files as end-of-file, and an
	incomplete line at the end as a complete line.

2006-09-10  LT-P <LT-P@LT-P.net>
	* server/iles.game, server/GuerreDe100ans.game: Added
	island-discovery-bonus.

2006-09-10  Roland Clobus <rclobus@bigfoot.com>
	* configure.ac, meta-server/main.c: Added glib commandline parsing,
	--debug, --syslog-debug, --version. Fixed a bug for the current number
	of players. Added the servername to the syslog output.
	* client/gtk/data/Makefile.am: Added splash.svg to the tarball.
	* common/state.c, server/player.c, server/trade.c, server/server.h,
	server/pregame.c: Reconnect during trade.

2006-09-07  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/data/Makefile.am: Add rule for splash.png

2006-09-03  Thomas Schürger <thomas@schuerger.com>
	* common/gtk/gtkbugs.c: Enabled workaround for toolbuttons that could
	not be pressed twice.

2006-09-03  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/data/Makefile.am, editor/gtk/Makefile.am: Remove the *.res
	files from the tarball (partly revert 2006-09-01)
	* Changed ChangeLog to utf8.
